revised CSS link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Talgar BOLAT</title>
-    <link rel="stylesheet" href="https://github.com/talgarbolat/cv/blob/main/CSS/styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
   </head>
 
     <table cellspacing="20">
