--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <table cellspacing="20">
       <tr>
         <td><img src="Talgar Bolat.jpg" alt="Talgar profile picture"></td>
-        <td><h1>Talgar BOLAT</h1><p><em>Web Developper in <strong><a href="https://www.linkedin.com/in/talgarbolat/">Astana Associates Ltd.</a></strong></em></p>
+        <td><h1>Talgar BOLAT</h1><p><em>Web Developper at <strong><a href="https://www.linkedin.com/in/talgarbolat/">Astana Associates Ltd.</a></strong></em></p>
         <p>My wife started a consulting firm from January 2022, while I started to learn and support its web developpment!</p></td>
       </tr>
     </table>
